--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <h5><span id="resultRating">Low Risk</span></h5>
         </div>
         <div>
-            <i class="disclaimer">The Eyesafe Screen Time Risk Calculator utilizes a proprietary algorithm to plot an employer’s workforce based on several dimensions of blue light exposure. There is a growing body of evidence underscored by a significant amount of academic research which confirms the impact of blue light exposure across many aspects of health and safety.</i>
+            <i class="disclaimer">The Eyesafe® Screen Time Risk Calculator utilizes a proprietary algorithm to plot an employer’s workforce based on several dimensions of blue light exposure. There is a growing body of evidence underscored by a significant amount of academic research which confirms the impact of blue light exposure across many aspects of health and safety.</i>
         </div>
         <button type="button" id="solutionsButton" onclick="window.open('https://eyesafe.com/screen-protection-for-business/', '_blank')">Solutions</button>
     </div>    
